[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pycalc"
description = "An MVC calculator made in Qt."
authors = [{name = "Tim Jones"}]
readme = "README.md"
license = {file = "LICENSE.md"}
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Education",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib",
]
requires-python = ">=3.8"
dependencies = [
    "PyQt5"
]

[project.scripts]
calculator = "pycalc.pycalc:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]
docs = [
    "numpydoc",
    "nbconvert",
    "ipykernel",
    "sphinx<6.0.0",
    "sphinx-copybutton",
    "sphinx-issues",
    "sphinx-design",
    "pyyaml",
    "pydata_sphinx_theme==0.10.0rc2",
]

[project.urls]
Source = "https://github.com/TheDeanLab/CI2023"
